# moos-ivp-umassd

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: CMake_Build.yml
data/reproducible/in-water/iver__28_12_2015_____21_37_38/: current._bhv  iver__28_12_2015_____21_37_38._moos  iver__28_12_2015_____21_37_38.slog  iver__28_12_2015_____21_37_38.ylog  nav_x.alog  nav_xy.alog  nav_y.alog
data/reproducible/simulation/iver__18_12_2016_____17_26_26/: iver__18_12_2016_____17_26_26._moos  iver__18_12_2016_____17_26_26.slog  iver__18_12_2016_____17_26_26.ylog  nav_x.alog  nav_xy.alog  nav_y.alog
dockerfiles/crypto/: Dockerfile  run_repro_launch.sh
dockerfiles/crypto/data_from_runs/: ciphertext  secret_message.alog
dockerfiles/moos-ivp_15.5/: Dockerfile
dockerfiles/reproducible/: Dockerfile  run_repro_launch.sh
dockerfiles/umassd/: Dockerfile
missions/checkout/: README.md  all.def
missions/checkout/plugs/: app_pHelmIvP.plug  app_pMarinePID.plug  app_pMarineViewer.plug  app_uProcessWatch.plug  app_uSimMarine.plug  bhv_deploy_survey.plug  bhv_return.plug  data_datum.plug
missions/crypto/: README.md  repro_launch.sh  simulation_launch.sh
missions/crypto/plugs/: app_pNodeReporter.plug  app_pWolfDecrypt.plug  app_pWolfEncrypt.plug  bhv_return.plug
missions/crypto/scripts/: mooskill.sh
missions/reproducible/: README.md  repro_launch.sh  reproducible.sh
missions/reproducible/plugs/: app_pLogger.plug  app_pMoosKiller.plug  bhv_hsline.plug  bhv_modes.plug  data_errata.plug
missions/reproducible/scripts/: engage_ivphelm.sh
missions/uas/: README.md  all.def  clean.sh  runtime_launch.sh  simulation_launch.sh
missions/uas/plugs/: app_iOceanServerComms.plug  app_pHelmIvP.plug  app_pNodeReporter.plug  app_uProcessWatch.plug  app_uSimpleRobot.plug  bhv_deploy_survey.plug  bhv_initialize.plug  data_errata.plug
missions/uas/scripts/: launch.sh  release_control.sh
scripts/: generate_moos_skel.sh  mooskill.sh
scripts/compare-two-images/: compare.py  repro_png.gnuplot
scripts/moos-ivp/: fetch_moos-ivp_15-5.sh
scripts/moos-ivp-anrp/: updateBuild.patch
src/: CMakeLists.txt
src/lib_acommsMsgs/: CMakeLists.txt  moos_report.proto
src/lib_bhvSimpleDepth/: BHV_SimpleDepth.cpp  BHV_SimpleDepth.h  CMakeLists.txt  README
src/pMoosKiller/: CMakeLists.txt  MoosKiller.cpp  MoosKiller.h  MoosKillerMain.cpp  pMoosKiller.moos
src/pWolfDecrypt/: CMakeLists.txt  WolfDecrypt.cpp  WolfDecrypt.h  WolfDecryptMain.cpp  crypto-aes.h
src/pWolfEncrypt/: CMakeLists.txt  WolfEncrypt.cpp  WolfEncrypt.h  WolfEncryptMain.cpp  crypto-aes.h  pWolfEncrypt.moos
src/pWolfEncrypt/MacOS/: fmemopen.h
src/uSimpleRobot/: CMakeLists.txt  SimpleRobot.cpp  SimpleRobot.h  SimpleRobotMain.cpp  uSimpleRobot.moos
