#MESSAGE("PROTOBUF_INCLUDE_DIRS: " ${PROTOBUF_INCLUDE_DIRS})
#MESSAGE("PROTOBUF_IMPORT_DIRS: " ${PROTOBUF_IMPORT_DIRS})
FILE(GLOB PROTOS *.proto)
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER ${PROTOS})
ADD_LIBRARY(acommsMsgs SHARED ${PROTO_HEADER} ${PROTO_SRC})
TARGET_LINK_LIBRARIES( acommsMsgs
    ${PROTOBUF_LIBRARY}
    dccl
    dccl_arithmetic
    dccl_ccl_compat
  )

